--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.keyboardncoffee</groupId>
-	<artifactId>errormessagehandler</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>errormessagehandling</artifactId>
+	<version>1.0.2-SNAPSHOT</version>
 	<name>errormessagehandler</name>
 	<description>errormessagehandler</description>
 	<url/>
